kubernetes/namespace.yaml
# Namespace
apiVersion: v1
kind: Namespace
metadata:
  name: mortgage-system
  labels:
    name: mortgage-system
